# quiet

./: .gitignore  CMakeLists.txt  FINAL_SUBMISSION.md  README.md  SUBMISSION.md  SystemTrayController.cpp  SystemTrayController.h  build_installers.sh  check-workflow-syntax.py  create_github_release.sh  create_release.sh  debug-workflow.sh  docker-build-test.sh  final-checksums.txt  noise_cancellation_papers_research.md  prepare-release-package.sh  simulate-github-build.sh  test-build-local.sh  test-github-actions.sh  validate-workflow.sh
.devcontainer/: devcontainer.json
.github/workflows/: release-minimal.yml  release-simple.yml  release.yml  test-build.yml  test-simple.yml
.roo/: mcp.json
cmake/: RNNoise.cmake
docs/: VirtualDeviceRouter.md  algorithm_design.md  audio_frameworks_research.md  audio_visualization_research.md  consolidated_requirements.md  data_architecture.md  detailed_architecture.md  functional_requirements.md  infrastructure_architecture.md  non_functional_requirements.md  performance_validation_report.md  project_requirements.md  system_architecture_pseudocode.md  technical_specification.md  test_strategy.md  testing-github-actions-locally.md
docs/research/: consolidated_research.md  noise_cancellation_research.md  noise_cancellation_solutions_research.md
examples/: logger_example.cpp  virtual_device_router_example.cpp  waveform_display_example.cpp
github-actions-simulation/: macos-sha256.txt  windows-sha256.txt
github-actions-simulation/include/quiet/core/: ConfigurationManager.h  VirtualDeviceRouter.h
github-actions-simulation/include/quiet/interfaces/: IAudioEventListener.h
github-actions-simulation/include/quiet/ui/: WaveformDisplay.h
github-actions-simulation/include/quiet/utils/: Logger.h
github-actions-simulation/installer/: README.md
github-actions-simulation/installer/macos/: README.md  create_dmg.sh
github-actions-simulation/installer/scripts/: install_quiet.sh
github-actions-simulation/src/: main.cpp
github-actions-simulation/src/core/: AudioBuffer.cpp  ConfigurationManager.cpp  EventDispatcher.cpp  NoiseReductionProcessor.cpp
github-actions-simulation/src/ui/: MainWindow.cpp  SpectrumAnalyzer.README.md  SpectrumAnalyzerExample.cpp  SpectrumAnalyzer_original.cpp  WaveformDisplay.cpp
github-actions-simulation/src/utils/: Logger.cpp
github-actions-simulation/tests/: CMakeLists.txt
github-release/: BUILD_INSTRUCTIONS.md  RELEASE_NOTES.md  SHA256SUMS.txt
include/quiet/core/: AudioBuffer.h  AudioDeviceManager.h  ConfigurationManager.h  EventDispatcher.h  NoiseReductionProcessor.h  VirtualDeviceRouter.h
include/quiet/interfaces/: IAudioEventListener.h
include/quiet/ui/: MainWindow.h  SpectrumAnalyzer.h  SpectrumAnalyzer_original.h  WaveformDisplay.h  WaveformDisplay_original.h
include/quiet/utils/: Logger.h
installer/: README.md
installer/macos/: dmg_setup.scpt
installer/scripts/: install_quiet.sh  uninstall_quiet.sh
installer/windows/: README.md  quiet_installer.nsi
release-package/: BUILD_REQUIREMENTS.md  RELEASE_NOTES.md  SHA256SUMS.txt
release-package/docs/: README.md  technical_specification.md  testing-github-actions-locally.md
release-package/final-release/: BUILD_REQUIREMENTS.md
release-package/macos/: README.md  create_dmg.sh  post_install.sh
release-package/windows/: QUIET.exe.info  post_install.bat  quiet_installer.nsi
release-packages/: quiet  quiet.cpp
release-packages/dmg-content/: README.txt
release-packages/windows/: LICENSE  README.txt
releases/: RELEASE_NOTES.md  SHA256SUMS
releases/macos/: Info.plist  QUIET-1.0.0.dmg.info  dmg_setup.scpt  post_install.sh
releases/windows/: LICENSE  QUIET-1.0.0-Setup.exe.info  README.md  post_install.bat
resources/config/: default_settings.json
resources/icons/: README.md
scripts/: run_tests.sh
src/: main.cpp
src/core/: AudioBuffer.cpp  AudioDeviceManager.cpp  ConfigurationManager.cpp  EventDispatcher.cpp  NoiseReductionProcessor.cpp  VirtualDeviceRouter.cpp
src/platform/macos/: BlackHoleIntegration.cpp  CoreAudioDevice.cpp
src/platform/windows/: VBCableIntegration.cpp  WASAPIDevice.cpp
src/ui/: MainWindow.cpp  MainWindow_original.cpp  SpectrumAnalyzer.README.md  SpectrumAnalyzer.cpp  SpectrumAnalyzerExample.cpp  SpectrumAnalyzer_original.cpp  WaveformDisplay.cpp  WaveformDisplay_original.cpp
src/utils/: Logger.cpp
tests/: CMakeLists.txt  CMakeLists_old.txt  TestUtils.cpp  TestUtils.h
tests/integration/: AudioPipelineTest.cpp
tests/performance/: PerformanceValidation.cpp
tests/unit/: AudioBufferTest.cpp  AudioDeviceManagerTest.cpp  LoggerTest.cpp  NoiseReductionProcessorTest.cpp  VirtualDeviceRouterTest.cpp
